# Qbits

./: CMakeLists.txt  Main.qml  e11m53rawdata.h  e4m3rawdata.h  e5m2rawdata.h  f64rawdata.h  main.cpp
